# vika

./: .editorconfig  .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: testing.yml
vika/: __main__.py  cli.py  config.py  utils.py
vika/commands/: cmd_cal.py  cmd_crypto.py  cmd_football.py  cmd_github.py  cmd_note.py  cmd_password.py  cmd_promocode.py  cmd_quote.py  cmd_tidy.py  cmd_weather.py
vika/services/: svc_cal.py  svc_crypto.py  svc_github.py  svc_note.py  svc_quote.py  svc_weather.py
vika/tests/: test_template.py
vika/tests/e2e/: test_crypto.py
vika/utils/: utils.py
