[project]
name = "vika"
version = "0.0.1"
description = "Simple bot for moderate my chat"
authors = ["Michael Savin <jtprogru@gmail.com>"]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/jtprogru/vika"
repository = "https://github.com/jtprogru/vika"
documentation = "https://github.com/jtprogru/vika/wiki"

[dependencies]
python = "^3.9"
requests = "^2.26.0"
ruamel.yaml = "^0.17.16"
attrs = "21.2.0"
black = "21.9b0"
cachetools = "4.2.2"
certifi = "2021.5.30"
cffi = "1.14.6"
charset-normalizer = "2.0.6"
click = "8.0.1"
colorama = "0.4.4"
commonmark = "0.9.1"
Deprecated = "1.2.13"
flake8 = "3.9.2"
gazpacho = "1.1"
geojson = "2.5.0"
google-api-core = "2.0.1"
google-api-python-client = "2.22.0"
google-auth = "2.1.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.4.6"
googleapis-common-protos = "1.53.0"
greenlet = "1.1.1"
httplib2 = "0.19.1"
idna = "3.2"
iniconfig = "1.1.1"
isort = "5.9.3"
jedi = "0.18.0"
mccabe = "0.6.1"
msgpack = "1.0.2"
mypy-extensions = "0.4.3"
neovim = "0.3.1"
oauthlib = "3.1.1"
packaging = "21.0"
parso = "0.8.2"
pathspec = "0.9.0"
platformdirs = "2.3.0"
pluggy = "1.0.0"
protobuf = "3.18.0"
py = "1.10.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.7.0"
pycoingecko = "2.2.0"
pycparser = "2.20"
pyflakes = "2.3.1"
PyGithub = "1.55"
Pygments = "2.10.0"
PyJWT = "2.1.0"
PyNaCl = "1.4.0"
pynvim = "0.4.3"
pyowm = "3.2.0"
pyparsing = "2.4.7"
PySocks = "1.7.1"
pytest = "6.2.5"
python-coinmarketcap = "0.3"
pytz = "2021.1"
quote = "2.0.4"
regex = "2021.8.28"
requests = "2.26.0"
requests-oauthlib = "1.3.0"
rich = "10.10.0"
rsa = "4.7.2"
six = "1.16.0"
toml = "0.10.2"
tomli = "1.2.1"
typing-extensions = "3.10.0.2"
uritemplate = "3.0.1"
urllib3 = "1.26.7"
wrapt = "1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.10.1"
pytest-env = "^0.6.2"
black = "^21.7b0"
flake8 = "^3.9.2"


[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "test*.py"
norecursedirs = [
  ".git", ".tox", "venv*", "requirements*"
]

addopts = '''
  --verbose
  --strict-markers
  --color=yes
  --tb=short
'''
testpaths = [
    "tests",
]

env = [
  "DEBUG=True",
]

[tool.black]
line-length = 160
target-version = ['py38', 'py39']
black_skip_string_normalization = true
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | venv
  | .venv
  | tests
)/
'''
