# https://pypi.org/project/setupcfg-generator/
[metadata]
name = vika
version = 0.0.1
author = "Michael Savin"
author_email = "jtprogru@gmail.com"
description = "Some helpers functions."
license = file: LICENSE.md
keywords = "password generator assistance"
url = "https://github.com/jtprogru/vika"
project_urls = 
    Documentation = "https://github.com/jtprogru/vika/wiki"
    Source = "https://github.com/jtprogru/vika"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = vika
include_package_data = True
install_requires = 
	PyGithub
	PyJWT
	PySocks
	click
	google-api-core
	google-api-python-client
	google-auth
	google-auth-oauthlib
	packaging
	pycoingecko
	pyowm
	pyparsing
	pytest
	python-coinmarketcap
	pytz
	quote
	requests
	rich
	rsa

[options.entry_points]
console_scripts =
    vika = vika.cli:cli
